fix: add leftovers to final response of OnlineGame