@@ -3,6 +3,7 @@ package com.wblazej.services;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.wblazej.models.onlinegame.Clan;
@@ -18,8 +19,11 @@ public class OnlineGameService {
     int player_count = clans.stream().map(Clan::getNumberOfPlayers).reduce(0, Integer::sum);
     int groups_count = (int) Math.ceil((double) player_count / data.groupCount);
 
-    List<List<Clan>> groups = Stream.generate(() -> (List<Clan>) new ArrayList<Clan>()).limit(groups_count).toList();
+    List<List<Clan>> groups = Stream.generate(() -> (List<Clan>) new ArrayList<Clan>()).limit(groups_count)
+        .collect(Collectors.toList());
+
     int[] sums = new int[groups_count];
+    List<Clan> leftovers = new ArrayList<>();
 
     clans.forEach(clan -> {
       for (int i = 0; i < groups_count; i++) {
@@ -29,9 +33,20 @@ public class OnlineGameService {
 
         sums[i] += clan.getNumberOfPlayers();
         groups.get(i).add(clan);
-        break;
+        return;
       }
+
+      leftovers.add(clan);
     });
+
+    if (leftovers.size() > 0) {
+      Request req = new Request(
+        data.groupCount,
+        leftovers
+      );
+
+      groups.addAll(OnlineGameService.process_queue(req));
+    }
 
     return groups;
   }
